--- a/Front/src/tpl/domain.html
+++ b/Front/src/tpl/domain.html
@@ -2,8 +2,8 @@
 <div class="form-column profile-content ">
   <div class="basic-form">
     <div class="domain-p">
-      <i class="material-icons">info_outline</i>
-      <p>Here you can add your custom tracking domains. We highly recommend adding a custom domain.
+
+      <p><i class="material-icons">info_outline</i>Here you can add your custom tracking domains. We highly recommend adding a custom domain.
       The default voluumtrk.com is meant for testing purposes only.</p>
     </div>
     <p>In order to add a domain you will need to CNAME one of following domains:
@@ -75,7 +75,7 @@
       </div> -->
       <div class="profile-form-footer clearfix">
         <md-button class="save-btn" ng-click="domainSava()" ng-disabled="form.$invalid">
-          <i class="material-icons save-btn-icon">done</i>
+          <i class="icon-ok"></i>
           save
         </md-button>
       </div>
