--- a/Front/src/tpl/trafficSource.html
+++ b/Front/src/tpl/trafficSource.html
@@ -16,7 +16,7 @@
             </div>
             <div class="cs-subform-search">
                 <a>
-                    <md-icon class="material-icons md-24" ng-click="search()">search</md-icon>
+                    <i class="icon-search md-24" ng-click="search()"></i>
                 </a>
             </div>
         </div>
