--- a/Front/src/tpl/referralProgram.html
+++ b/Front/src/tpl/referralProgram.html
@@ -4,13 +4,15 @@
   <div class="referral-program">
     <p>Use the below URLs to direct your referrals to either the Voluum main page or straight to the sign-up page. All sign-ups from these links will be permanently associated with your account. Visitors to these links will have 30 day cookies placed on their computers so you may see delayed referrals. You will be receiving 7% lifetime monthly commissions on all paying referrals, both on their base fees, and overage charges. </p>
     <p>You can find more info and promo materials here.</p>
-    <div class="form-group clearfix">
-      <label class="col-sm-2 control-label">Link to sign up page</label>
-      <div class="col-sm-7">
+    <div class="form-group referral-group clearfix">
+      <div class="row">
+      <label class="col-sm-3 control-label">Link to sign up page</label>
+      <div class="col-sm-6">
         <input type="text" class="form-control" ng-model="linkurl" readonly>
       </div>
       <div class="col-md-3">
         <md-button clipboard class="md-raised copy-btn" text="linkurl" ng-click="itemUrlClick()">{{btnWord}}</md-button>
+      </div>
       </div>
     </div>
     <div class="data-table">
