--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -11,18 +11,21 @@
     <div class="cs-action-bar clearfix">
         <div class="left-con">
             <div class="cs-subform-control">
+                <i class="icon-sort-down"></i>
                 <select class="cs-subform-select" ng-model="groupBy[0]" placeholder="Choose grouping" ng-change="changeGroupby(0)">
                     <!--<option value="">Choose grouping</option>-->
                     <option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:filterIsHow">{{gb.display}}</option>
                 </select>
             </div>
             <div class="cs-subform-control">
+                <i class="icon-sort-down"></i>
                 <select class="cs-subform-select" ng-model="groupBy[1]" ng-disabled="!groupBy[0]" placeholder="Choose grouping" ng-change="changeGroupby(1)">
                     <option value="">Choose grouping</option>
                     <option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter1">{{gb.display}}</option>
                 </select>
             </div>
             <div class="cs-subform-control">
+                <i class="icon-sort-down"></i>
                 <select class="cs-subform-select" ng-model="groupBy[2]" ng-disabled="!groupBy[1]" placeholder="Choose grouping">
                     <option value="">Choose grouping</option>
                     <option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter2">{{gb.display}}</option>
@@ -32,7 +35,7 @@
         <div class="right-select">
             <div class="cs-subform-control search-con">
                 <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
-                <md-icon class="material-icons md-24" ng-click="applySearch($event)">search</md-icon>
+                <i class="icon-search md-24" ng-click="applySearch($event)"></i>
             </div>
             <div class="cs-subform-control">
                 <md-select class="cs-subform-select" ng-model="datetype">
@@ -95,12 +98,12 @@
                 </ul>
                 <div class="my-btn">
                 <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange()">
-                    <i class="material-icons btn-icon">done</i>
+                    <i class="icon-ok"></i>
                     {{'apply changes' | translate}}
                 </md-button>
                 
                 <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose()">
-                    <i class="material-icons btn-icon close-icon">close</i>
+                    <i class="icon-remove"></i>
                     {{'close' | translate}}
                 </md-button>
                 </div>
