--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -1,80 +1,80 @@
 <div class="container w-xxxxl w-auto-xs">
-    <p class="navbar-brand block m-t">{{app.name}}</p>
+    <div class="navbar-brand block m-t"><img src="assets/img/logo-two.png"></div>
     <div class="m-b-lg">
-        <div class="wrapper text-center">
-            <strong>{{app.subtitle}}</strong>
-        </div>
         <form name="form" class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-4 control-label">Email<span class="star-icon">*</span></label>
-                <div class="col-sm-7">
+                <div class="col-sm-12 sign-input">
+                    <i class="icon-envelope form-control-feedback small-font icon-envelope-top"></i>
                     <input type="email" name="email" placeholder="Email" class="form-control" ng-model="user.email"
                            ng-blur="checkEmail()" required>
                     <span style="color:red" ng-show="form.email.$dirty && form.email.$invalid">
-                    <span style="color:red" ng-show="form.email.$invalid">
-                    <span ng-show="form.email.$error.required">Email is required.</span>
-                    <span ng-show="form.email.$error.email">Email must be a valid Email</span>
-                    <span ng-show="form.email.$error.check">Email is exist</span>
+                        <span style="color:red" ng-show="form.email.$invalid">
+                            <span ng-show="form.email.$error.required">Email is required.</span>
+                            <span ng-show="form.email.$error.email">Email must be a valid Email</span>
+                            <span ng-show="form.email.$error.check">Email is exist</span>
+                        </span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Password<span class="star-icon">*</span></label>
-                <div class="col-sm-7">
+                <div class="col-sm-12 sign-input">
+                    <i class="icon-lock form-control-feedback"></i>
                     <input type="password" name="password" placeholder="Password" class="form-control"
                            ng-model="user.password" required>
                     <span style="color:red" ng-show="form.password.$dirty && form.password.$invalid">
-                    <span style="color:red" ng-show="form.password.$invalid">
+                        <span style="color:red" ng-show="form.password.$invalid">
                     <span ng-show="form.password.$error.required">Password is required.</span>
+                    </span></span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Repeat Password<span class="star-icon">*</span></label>
-                <div class="col-sm-7">
+                <div class="col-sm-12 sign-input">
+                    <i class="icon-lock form-control-feedback"></i>
                     <input type="password" name="repeatpassword" placeholder="Repeat Password" class="form-control"
                            ng-model="repeatpassword">
                     <span style="color:red" ng-show="form.password.$valid">
-                    <span ng-show="repeatpassword!=user.password">Password is not the same.</span>
+                        <span ng-show="repeatpassword!=user.password">Password is not the same.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">FirstName<span class="star-icon">*</span></label>
-                <div class="col-sm-7">
+                <div class="col-sm-12 sign-input">
+                    <i class="icon-user form-control-feedback"></i>
                     <input type="text" name="firstname" placeholder="FirstName" class="form-control"
                            ng-model="user.firstname" required>
                     <span style="color:red" ng-show="form.firstname.$dirty && form.firstname.$invalid">
-                    <span style="color:red" ng-show="form.firstname.$valid">
-                    <span ng-show="form.firstname.$error.required">FirstName is required.</span>
+                        <span style="color:red" ng-show="form.firstname.$valid">
+                            <span ng-show="form.firstname.$error.required">FirstName is required.</span>
+                        </span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">LastName<span class="star-icon">*</span></label>
-                <div class="col-sm-7">
+                <div class="col-sm-12 sign-input">
+                    <i class="icon-user form-control-feedback"></i>
                     <input type="text" name="lastname" placeholder="LastName" class="form-control"
                            ng-model="user.lastname" required>
                     <span style="color:red" ng-show="form.lastname.$dirty && form.lastname.$invalid">
-                    <span style="color:red" ng-show="form.lastname.$invalid">
-                    <span ng-show="form.lastname.$error.required">LastName is required.</span>
+                        <span style="color:red" ng-show="form.lastname.$invalid">
+                            <span ng-show="form.lastname.$error.required">LastName is required.</span>
+                        </span>
                     </span>
                 </div>
             </div>
-
-            <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="signup()"
+            <button type="submit" class="btn btn-lg btn-primary btn-block sign-top" ng-click="signup()"
                     ng-disabled='form.$invalid || repeatpassword!=user.password' translate>{{ 'signup' | translate }}
             </button>
             <div class="line line-dashed"></div>
-            <p class="text-center">
-                <small>Already have an account?</small>
+            <p class="text-center sign-text">
+                <small>Already have an account?</small><a ui-sref="access.signin" class="btn signup-btn" translate>{{ 'signin' | translate }}</a>
             </p>
-            <a ui-sref="access.signin" class="btn btn-lg btn-default btn-block" translate>{{ 'signin' | translate }}</a>
         </form>
     </div>
-    <div class="text-center">
-        <p>
-            <small class="text-muted">All Rights Reserved<br>&copy; 2016</small>
-        </p>
-    </div>
 </div>
+<div class="text-center boot-bg navbar-fixed-bottom">
+    <p>
+        <small class="text-muted">All Rights Reserved &copy; 2016</small>
+    </p>
+</div>
+
