--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -42,7 +42,7 @@
 		</div>
     </div>
     <div class="col-sm-12 col-md-6">
-			<h3 class="subscription-title">Plan details</h3>
+			<h3 class="subscription-title subscription-title2">Plan details</h3>
 			<div class="table-out">
 				<div class="plan-detail">
 					<span>Subscription plan:</span>
