--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input type="text" name="name" class="form-control" ng-model="item.name" required>
                     <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
                     <span ng-show="editForm.name.$error.required">Name is required.</span>
@@ -30,7 +30,7 @@
 
             <div class="form-group">
                 <label class="col-sm-3 control-label">Postback Url：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input my-text="" type="text" name="postbackUrl" class="form-control" ng-model="item.postbackUrl" ng-blur="validateUrl()">
                     <span style="color:red" ng-show="editForm.postbackUrl.$dirty && editForm.postbackUrl.$invalid">
                             <span ng-show="editForm.postbackUrl.$error.urlformat">URL must be a valid URL.</span>
@@ -39,7 +39,7 @@
             </div>
             <div class="url-tokens-row form-group">
                 <label class="col-sm-3 control-label"></label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <i>Available URL tokens:</i>
                     <div class="url-tokens">
                         <div class="url-token"
@@ -56,7 +56,7 @@
 
             <div class="form-group">
                 <label class="col-sm-3 control-label">Pixel redirect URL：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input type="url" class="form-control" name="pixelRedirectUrl" ng-model="item.pixelRedirectUrl" ng-pattern="urlPattern">
                     <span style="color:red" ng-show="editForm.pixelRedirectUrl.$dirty && editForm.pixelRedirectUrl.$invalid">
                         <span ng-show="editForm.pixelRedirectUrl.$error.pattern">URL must be a valid URL.</span>
@@ -76,7 +76,7 @@
                     <div class="label-con">
                         <i class="material-icons">settings</i>
                         <label>Advanced</label>
-                        <i class="material-icons arrow-down">keyboard_arrow_down</i>
+                        <i class="icon-caret-down"></i>
                     </div>
                 </div>
             </div>
