edit-change-paln-dialog update

--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -16,7 +16,7 @@
             </div>
             <li class=" w-md3 h-line">
               <div style="color: #000;">{{p.desc}}</div>
-              <button class="btn p-btn btn-three p-btn-01" type="button" ng-click="editChangePlan(p.id)"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+              <button class="btn p-btn btn-three p-btn-01" type="button" ng-click="editChangePlan(p)"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
             </li>
           </div>
         </ul>
