添加tsreport 前端页面

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -96,6 +96,7 @@
 <script src="js/controllers/flow-edit.js"></script>
 <script src="js/controllers/dashBoard.js"></script>
 <script src="js/controllers/conversion.js"></script>
+<script src="js/controllers/tsReport.js"></script>
 <!-- endbuild -->
 
 </body>
