--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -148,6 +148,9 @@
                                         </md-menu-content>
                                     </md-menu>
                                 </md-menu-item>
+                                <md-menu-item ng-if="canEdit && perfType == 'traffic'">
+                                    <md-button ng-click="goTSReport(row)">TS Report</md-button>
+                                </md-menu-item>
                             </md-menu-content>
                         </md-menu>
                     </md-menu-bar>
