--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -87,6 +87,12 @@
                     <span>{{'Conversions' | translate}}</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="app.report.tsreport" md-ink-ripple>
+                    <i class="icon-globe"></i>
+                    <span>{{'TS Report' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
