--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -25,7 +25,7 @@
             </ul>
           </li>
           <li class="col-md-4 my-price">
-            {{desc}}
+            <div style="color: #000;" ng-bind-html="desc"></div>
             <button class="btn p-btn btn-three p-btn-02" type="button" disabled><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
           </li>
         </ul>
