支付页面修改

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -8,7 +8,7 @@
     <div class="edit-pricing-box clearfix">
       <ul class="container">
         <ul>
-          <li class="col-md-8 my-price-l">
+          <!-- <li class="col-md-8 my-price-l">
             <h2>Billing details</h2>
             <ul class="p-edit">
               <li><i class="icon-circle-blank"></i><span>billing name</span><em>{{item.billingname}}</em></li>
@@ -23,8 +23,8 @@
             <ul class="p-pay">
               <li><i class="icon-circle-blank"></i><span class="p-pay-l">PayPal account</span><span class="p-pay-r">{{userItem.email}}</span></li>
             </ul>
-          </li>
-          <li class="col-md-4 my-price">
+          </li> -->
+          <li class="col-md-4 my-price my-price-select">
             <div style="color: #000;" ng-bind-html="desc"></div>
             <button class="btn p-btn btn-three p-btn-02" type="button" disabled><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
           </li>
