支付页面联调

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -6,6 +6,7 @@
       </div>
     </div>
     <div class="edit-pricing-box clearfix">
+    <form name="form" ng-submit="planCommit()">
       <ul class="container">
         <ul>
           <!-- <li class="col-md-8 my-price-l">
@@ -30,6 +31,7 @@
           </li>
         </ul>
       </ul>
+    </form>
     </div>
 
     <div class="bottom-box">
