--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -95,6 +95,7 @@
 <script src="js/controllers/report.js"></script>
 <script src="js/controllers/flow-edit.js"></script>
 <script src="js/controllers/dashBoard.js"></script>
+<script src="js/controllers/conversion.js"></script>
 <!-- endbuild -->
 
 </body>
