修改dashbord图表显示不全

--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -39,8 +39,8 @@
             </div>
         </div>
     </div>
-    <div class="row data-tables-chart-container">
-        <div class="col-sm-12 col-md-6 data-tables">
+    <div class="data-tables-chart-container" layout="row" layout-sm="column">
+        <div class="data-tables" flex>
             <div class="table-toggles clearfix">
                 <div class="toggles-button-left">
                     <ul>
@@ -73,7 +73,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-sm-12 col-md-6 chart-widget">
+        <div class="chart-widget" flex>
             <div id="container">Placeholder for chart</div>
         </div>
     </div>
