--- a/Front/src/tpl/userManagement.html
+++ b/Front/src/tpl/userManagement.html
@@ -1,16 +1,16 @@
 <h1 class="setting-title">User management</h1>
 <div class="form-column profile-content">
 	<div class="user-mangement" style="display: none;">
-		<span>he user management tool is not available for Pro accounts. Upgrade to an Agency or Enterprise plan to gain access to this feature. </span>
-		<span><i class="material-icons">supervisor_account</i>Agency plan has 2 additional users.</span>
-		<span><i class="material-icons">supervisor_account</i>Enterprise plan has 5 additional users.</span>
+		<!--<span>he user management tool is not available for Pro accounts. Upgrade to an Agency or Enterprise plan to gain access to this feature. </span>
+		<span><i class="material-icons">supervisor_account</i>{{plan.name}} plan has {{plan.userLimit}} additional users.</span>
+		<span><i class="material-icons">supervisor_account</i>Enterprise plan has {{plan.userLimit}} additional users.</span>-->
 		<div class="plan-btn">
 			<md-button class="md-raised copy-btn">Upgrade plan</md-button>
 		</div>
 	</div>
 	
 	<div class="user-mangement-content">
-		<div ng-show="userCount==plan.userLimit">
+		<div ng-show="invitationUserCount==plan.userLimit">
 			<span>Your plan has limitation of {{plan.userLimit}} user invitations</span>
 			<span>
 				You have reached the limit of users for your chosen plan.<br>
@@ -20,15 +20,15 @@
 				<md-button class="md-raised copy-btn">Upgrade plan</md-button>
 			</div>
 		</div>
-		<div ng-show="userCount<plan.userLimit">
+		<div ng-show="invitationUserCount<plan.userLimit">
 			<span>Your plan has limitation of {{plan.userLimit}} user invitations</span>
-			<span class="small-word" ng-show="invitationCount<plan.userLimit">You can invite {{plan.userLimit-invitation.invitations.length+invitation.users.length-1}} more users to your account</span>
-			<span style="color:red" ng-show="invitationCount>plan.userLimit">You can invite {{plan.userLimit-invitation.invitations.length+invitation.users.length-1}} more users to your account</span>
+			<span class="small-word" ng-show="!errMessage">You can invite {{plan.userLimit-invitationUserCount}} more users to your account</span>
+			<span style="color:red" ng-show="errMessage">You can invite {{plan.userLimit-invitationUserCount}} more users to your account</span>
 			<form name="emailForm">
 			  <div class="form-group">
 			    <label for="exampleInputEmail2">Invite users:</label>
 			    <div class="form-inline">
-			   		<input type="text" class="form-control" id="exampleInputEmail2" ng-model="emails" placeholder="jane.doe@example.com">
+			   		<input type="text" class="form-control" id="exampleInputEmail2" ng-model="emails" placeholder="xxx.xxx@example.com">
 			    	<button type="submit" class="btn btn-primary" ng-click="sendInvitation(emails)">Send invitation</button>
 			    </div>
 			  </div>	
@@ -36,22 +36,26 @@
 		</div>
 		<div class="form-group">
 			<label for="exampleInputEmail2">List of users:</label>
-			<div class="form-inline user-list" ng-repeat="user in invitation.users">
+			<div class="form-inline user-list">
+				<span><i class="material-icons">account_box</i> {{profile.name}}</span>
+				<button type="submit" class="btn btn-primary">owner</button>
+				<span>{{profile.email}}</span>
+			</div>
+			<div class="form-inline user-list" ng-repeat="user in users">
 				<span><i class="material-icons">account_box</i> {{user.name}}</span>
-				<button type="submit" class="btn btn-primary" ng-show="user.main">owner</button>
 				<span>{{item.email}}</span>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="exampleInputEmail2">Pending invitations:</label>
 			<div class="form-inline user-list" >
-				<span class="nothing-word" ng-show="invitation.invitations.length==0">
+				<span class="nothing-word" ng-show="pendingUsers.length==0">
 					You have no pending invitations
 				</span>
-				<div ng-repeat="i in invitation.invitations track by $index" class="itemList">
-					<span><i class="material-icons">account_box</i>{{i.lastDate}}</span>
-					<span class="email-con">{{i.email}}</span>
-					<i class="material-icons delete-user" ng-click="deleteInvitation(i)">close</i>
+				<div ng-repeat="pending in pendingUsers" class="itemList">
+					<span><i class="material-icons">account_box</i>{{pending.lastDate}}</span>
+					<span class="email-con">{{pending.email}}</span>
+					<i class="material-icons delete-user" ng-click="deleteInvitation(pending)">close</i>
 				</div>
 			</div>
 		</div>
