--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -84,7 +84,7 @@
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.eventLog" md-ink-ripple>
-                    <i class="glyphicon glyphicon-list-alt"></i>
+                    <i class="icon-th-list"></i>
                     <span>{{'eventLog' | translate}}</span>
                 </a>
             </li>
