--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -1,4 +1,4 @@
-<h1 class="setting-title">Referral program</h1>
+<h1 class="setting-title">SetUp</h1>
 
 <div class="form-column profile-content">
   <div class="setUp-page">
